# crterm

./: LICENSE  Makefile  README.md
chrome-extension-demo-for-crterm/crterm_output_listener/: README.md  background.js  manifest.json  popup.html  popup.js
chrome/app/: newterm_strings.grdp
chrome/app/vector_icons/: crterm.icon
chrome/browser/resources/crterm/: BUILD.gn  crterm.html  crterm_api_proxy.ts  crterm_app.css  crterm_app.html.ts  crterm_app.ts  crterm_invalid.html
chrome/browser/resources/newterm/: BUILD.gn  icons.html.ts  newterm.css  newterm.html  newterm.ts
chrome/browser/resources/settings/crterm_page/: crterm_page.html  crterm_page.ts
chrome/browser/ui/webui/crterm/: crterm.mojom
components/resources/: crterm_ui_resources.grdp  crterm_ui_scaled_resources.grdp
components/webui/crterm/resources/: xterm.js
debian/crterm/DEBIAN/: control
tools/: package_crterm_deb.sh
