# Copyright 2023 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//ui/webui/resources/tools/build_webui.gni")

build_webui("build") {
  grd_prefix = "crterm"
  static_files = [
    "crterm.html",
    "crterm_invalid.html",
  ]
  ts_files = [
    "crterm_app.ts",
    "crterm_app.html.ts",
    "crterm_api_proxy.ts",
  ]
  css_files = [ "crterm_app.css" ]

  ts_composite = true
  ts_deps = [
    "//third_party/lit/v3_0:build_ts",
    "//ui/webui/resources/cr_elements:build_ts",
    "//ui/webui/resources/js:build_ts",
    "//ui/webui/resources/mojo:build_ts",
  ]
  webui_context_type = "trusted"

  mojo_files_deps =
      [ "//chrome/browser/ui/webui/crterm:mojo_bindings_ts__generator" ]
  mojo_files = [
    "$root_gen_dir/chrome/browser/ui/webui/crterm/crterm.mojom-webui.ts",
  ]
}
